--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1211,3 +1211,47 @@ select{
 .form-style .required{
 	color:red;
 }
+
+main ul {
+    text-decoration: none;
+    list-style-type: none;
+    padding: 0;
+}
+
+main li {
+    background: white;
+    /* border-radius: 1em; */
+    padding: .8em;
+    margin: 1em 0;
+    box-shadow: 15px 21px 40px 0px rgba(0,0,0,0.04);
+  }
+
+main img {
+    width: 100%;
+    /* border-radius: .5em; */
+}
+
+main .content {
+    padding: .5em;
+  }
+
+main span {
+    font-size: 1.5em;
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    display: block;
+    margin: -.1em 0 .2em;
+}
+
+@media only screen and (min-width: 768px) {
+  main li {
+    display: grid;
+    grid-column-gap: 1em;
+    grid-template-columns: 180px auto;
+  }
+
+  main li:nth-child(even) {
+    direction: rtl;
+  }
+}
