--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -24,8 +24,8 @@ what's here to work the way you'd like it to.
 
     /* Colours */
     --color-primary: #3eb0ef;
-    --color-base: rgb(34, 89, 172);
-    --color-secondary: #5B7A81;
+    --color-base: #fff;
+    --color-secondary: #ffbe4a;
     --color-border: #c7d5d8;
     --color-bg: #f5f5f5;
 
@@ -459,7 +459,7 @@ h4,
 h5,
 h6 {
     margin-top: 0;
-    color: var(--color-base);
+    color: var(--color-secondary);
     line-height: 1.15;
     font-weight: 700;
     text-rendering: optimizeLegibility;
@@ -655,7 +655,7 @@ h6 {
     white-space: pre-wrap;
     padding: 20px;
     background: var(--color-base);
-    color: #fff;
+    color: #000;
     border-radius: 12px;
 }
 
@@ -665,7 +665,7 @@ h6 {
 .site-head {
     padding-top: 20px;
     padding-bottom: 20px;
-    color: #fff;
+    color: #000;
     background: var(--color-base);
     background-position: center;
     background-size: cover;
@@ -674,7 +674,7 @@ h6 {
 .site-nav-item {
     display: inline-block;
     padding: 5px 10px;
-    color: #fff;
+    color: #000;
     opacity: 0.7;
 }
 
@@ -708,16 +708,23 @@ h6 {
 }
 
 .site-banner {
-    max-width: 80%;
+    max-width: 90%;
     margin: 0 auto;
-    padding: 10vw 0;
+    padding: 0vw 0 3vw;
     text-align: center;
 }
+
+/* .site-banner img{
+    max-width: 50%;
+    /* margin: 0 auto;
+    padding: 1vw 0;
+    text-align: center; */
+
 
 .site-banner-title {
     margin: 0;
     padding: 0;
-    color: #fff;
+    color: #000;
     font-size: 4rem;
     line-height: 1.3em;
 }
@@ -744,8 +751,8 @@ h6 {
 .site-nav-button {
     display: inline-block;
     padding: 5px 10px;
-    border: #fff 1px solid;
-    color: #fff;
+    border: #000 1px solid;
+    color: #000;
     font-size: 1.3rem;
     line-height: 1em;
     border-radius: var(--radius);
@@ -986,9 +993,9 @@ h6 {
 
 .site-foot {
     padding: 20px 0 40px 0;
-    color: rgba(255,255,255,0.7);
+    color: rgba(10,10,10,0.7);
     font-size: 1.3rem;
-    background: var(--color-base);
+    background: var(--color-secondary);
 }
 
 .site-foot-nav {
@@ -998,12 +1005,13 @@ h6 {
 }
 
 .site-foot-nav a {
-    color: rgba(255,255,255,0.7);
+    color: rgba(10,10,10,0.7);
 }
 
 .site-foot-nav a:hover {
     text-decoration: none;
-    color: rgba(255,255,255,1);
+    font-weight: bold;
+    color: rgba(10,10,10,1);
 }
 
 .site-foot-nav-right a {
@@ -1197,13 +1205,13 @@ select{
 	height: 100px;
 }
 .form-style input[type=submit], .form-style input[type=button]{
-	background: #4B99AD;
+	background: var(--color-secondary);
 	padding: 8px 15px 8px 15px;
 	border: none;
-	color: #fff;
+	color: #000;
 }
 .form-style input[type=submit]:hover, .form-style input[type=button]:hover{
-	background: #4691A4;
+	background: var(--color-secondary);
 	box-shadow:none;
 	-moz-box-shadow:none;
 	-webkit-box-shadow:none;
@@ -1235,7 +1243,7 @@ main .content {
     padding: .5em;
   }
 
-main span {
+.quote {
     font-size: 1.5em;
     text-decoration: none;
     color: black;
